アクティビティ追加の処理を追加
git-svn-id: http://tasklet.googlecode.com/svn/trunk@67 071f029c-86fc-11de-bd5f-d5dc12eeefd8